syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;

message TransactionQueryRequest {
  string hash = 1;
}

message TransactionQueryResponse {
  Transaction tx = 1;
}

message Transaction {
  string hash = 1 [(gogoproto.jsontag) = "hash"];
  string from = 2 [(gogoproto.jsontag) = "from"];
  string to = 3 [(gogoproto.jsontag) = "to"];
  int64 nonce = 4 [(gogoproto.jsontag) = "nonce"];
  string gas_price = 5 [(gogoproto.jsontag) = "gas_price"];
  int64 gas_limit = 6 [(gogoproto.jsontag) = "gas_limit"];
  string amount = 7 [(gogoproto.jsontag) = "amount"];
  bytes payload = 8 [(gogoproto.jsontag) = "payload"];
}

service TransactionService {
  rpc GetTransactionByHash(TransactionQueryRequest) returns (TransactionQueryResponse) {
    option (google.api.http) = {
      get: "/v1/transactions/{hash}"
    };
  }
}
